removed nodemon from npm run testProd

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cross-env APP_ENV=prod NODE_ENV=production node ./src/index.js",
     "dev": "cross-env APP_ENV=dev nodemon ./src/index.js",
-    "testProd": "cross-env APP_ENV=testProd nodemon ./src/index.js",
+    "testProd": "cross-env APP_ENV=testProd ./src/index.js",
     "test": "cross-env APP_ENV=dev jest"
   },
   "author": "",
