Changed cloning repo files directly in the EC2_APP_DIR. And now it copies the repo folder inside EC2_APP_DIR

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -31,7 +31,7 @@ jobs:
               git pull origin dev
             else
               echo "Repository not found, cloning dev branch..."
-              git clone -b dev https://github.com/Matestampa/test_gitTutorial.git .
+              git clone -b dev https://github.com/Matestampa/test_gitTutorial.git
             fi
           EOF
           rm -f ec2_key.pem
