--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -18,6 +18,9 @@ jobs:
           echo "$EC2_KEY" > ec2_key.pem
           chmod 600 ec2_key.pem
           ssh -o StrictHostKeyChecking=no -i ec2_key.pem ${EC2_USER}@${EC2_HOST} << EOF
+            
+            REPO_NAME="test_gitTutorial"
+            
             cd ${APP_DIR}
 
             echo "PWD now:"
@@ -26,7 +29,8 @@ jobs:
             echo "Listing APP_DIR:"
             ls -la
             
-            if [ -d ".git" ]; then
+            f [ -d "\$REPO_NAME/.git" ]; then
+              cd "\$REPO_NAME"
               echo "Repository exists, pulling latest changes from dev branch..."
               git pull origin dev
             else
