--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -29,7 +29,7 @@ jobs:
             echo "Listing APP_DIR:"
             ls -la
             
-            f [ -d "\$REPO_NAME/.git" ]; then
+            if [ -d "\$REPO_NAME/.git" ]; then
               cd "\$REPO_NAME"
               echo "Repository exists, pulling latest changes from dev branch..."
               git pull origin dev
