All variables have been set, except the package name for the npm update of the schemas

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -17,16 +17,19 @@ jobs:
 
       - name: Deploy to EC2 via SSH
         env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_KEY: ${{ secrets.EC2_SSH_KEY }}
-          APP_DIR: ${{ secrets.EC2_APP_DIR }}
+          EC2_HOST: ${{ vars.EC2_HOST }}
+          EC2_USER: ${{ vars.EC2_USER }}
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+          APP_DIR: ${{ vars.EC2_APP_DIR }}
+          REPO_NAME : ${{ vars.REPO_NAME }}
+          REPO_URL: ${{ vars.REPO_URL }}
+          REPO_BRANCH: ${{ vars.REPO_BRANCH }}
+          PM2_PROCESS_NAME: ${{ vars.PM2_PROCESS_NAME }}
+          NPM_SCRIPT_NAME: ${{ vars.NPM_SCRIPT_NAME }}
         run: |
-          echo "$EC2_KEY" > ec2_key.pem
+          echo "$EC2_SSH_KEY" > ec2_key.pem
           chmod 600 ec2_key.pem
           ssh -o StrictHostKeyChecking=no -i ec2_key.pem ${EC2_USER}@${EC2_HOST} << EOF
-            
-            REPO_NAME="test_gitTutorial"
             
             cd ${APP_DIR}
 
@@ -38,11 +41,11 @@ jobs:
             
             if [ -d "\$REPO_NAME/.git" ]; then
               cd "\$REPO_NAME"
-              echo "Repository exists, pulling latest changes from dev branch..."
-              git pull origin dev
+              echo "Repository exists, pulling latest changes from ${REPO_BRANCH} branch..."
+              git pull origin ${REPO_BRANCH}
             else
-              echo "Repository not foundd, cloning dev branch..."
-              git clone -b dev https://github.com/Matestampa/test_gitTutorial.git
+              echo "Repository not foundd, cloning ${REPO_BRANCH} branch..."
+              git clone -b ${REPO_BRANCH} ${REPO_URL}
               cd "\$REPO_NAME"
             fi
 
@@ -53,14 +56,14 @@ jobs:
             echo "Actualizando el paquete de schemas @matestampa/diffum-goals_mongoose-schemas"
             npm update "@matestampa/diffum-goals_mongoose-schemas"
 
-            echo "Chequeando si existe el proceso PM2: DIFFUM_GOALS_API_DEV"
+            echo "Chequeando si existe el proceso PM2: ${PM2_PROCESS_NAME}"
 
-            if pm2 list | grep -q "DIFFUM_GOALS_API_DEV"; then
+            if pm2 list | grep -q "${PM2_PROCESS_NAME}"; then
               echo "Proceso encontrado, reiniciando..."
-              pm2 restart DIFFUM_GOALS_API_DEV
+              pm2 restart ${PM2_PROCESS_NAME}
             else
               echo "Proceso NO encontrado, iniciando por primera vez..."
-              pm2 start npm --name DIFFUM_GOALS_API_DEV -- run testProd --restart-delay 10000
+              pm2 start npm --name ${PM2_PROCESS_NAME} -- run ${NPM_SCRIPT_NAME} --restart-delay 10000
             fi
 
           EOF
