Fixed some vars braces

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -27,7 +27,7 @@ jobs:
           PM2_PROCESS_NAME: ${{ vars.PM2_PROCESS_NAME }}
           NPM_SCRIPT_NAME: ${{ vars.NPM_SCRIPT_NAME }}
         run: |
-          echo "$EC2_SSH_KEY" > ec2_key.pem
+          echo "${EC2_SSH_KEY}" > ec2_key.pem
           chmod 600 ec2_key.pem
           ssh -o StrictHostKeyChecking=no -i ec2_key.pem ${EC2_USER}@${EC2_HOST} << EOF
             
@@ -39,14 +39,14 @@ jobs:
             echo "Listing APP_DIR:"
             ls -la
             
-            if [ -d "\$REPO_NAME/.git" ]; then
-              cd "\$REPO_NAME"
+            if [ -d "\${REPO_NAME}/.git" ]; then
+              cd "${REPO_NAME}"
               echo "Repository exists, pulling latest changes from ${REPO_BRANCH} branch..."
               git pull origin ${REPO_BRANCH}
             else
               echo "Repository not foundd, cloning ${REPO_BRANCH} branch..."
               git clone -b ${REPO_BRANCH} ${REPO_URL}
-              cd "\$REPO_NAME"
+              cd "${REPO_NAME}"
             fi
 
             echo "Instalando dependencias..."
