--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -66,5 +66,15 @@ jobs:
               pm2 start npm --name ${PM2_PROCESS_NAME} -- run ${NPM_SCRIPT_NAME} --restart-delay 10000
             fi
 
+            echo "Chequeando si API esta UP"
+            
+            sleep 5
+            if curl -fs http://localhost:3000/serverUp > /dev/null; then
+              echo "API is UP and responding correctly"
+            else
+              echo "API health check FAILED"
+              exit 1
+            fi
+
           EOF
           rm -f ec2_key.pem
