now, when the server up check fails, the pm2 proccess is stopped just in case

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -72,6 +72,7 @@ jobs:
             if curl -fs http://localhost:3000/serverUp > /dev/null; then
               echo "API is UP and responding correctly"
             else
+              pm2 stop ${PM2_PROCESS_NAME}
               echo "API health check FAILED"
               exit 1
             fi
